--- a/index.html
+++ b/index.html
@@ -596,9 +596,29 @@
                                 <h5>DOUK Ilyas</h5>
                                 <span class="text-primary">Treasurer</span>
                                 <div class="team-social">
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/profile.php?id=100006062176075&mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="http://linkedin.com/in/ilyas-douk-8b653624a"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.instagram.com/ilyas_douk/"><i class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item">
+                        <img class="img-fluid" src="img/team-8.jpg" alt="">
+                        <div class="d-flex">
+                            <div class="flex-shrink-0 btn-square bg-primary" style="width: 90px; height: 90px;">
+                                <i class="fa fa-2x fa-share text-white"></i>
+                            </div>
+                            <div class="position-relative overflow-hidden bg-light d-flex flex-column justify-content-center w-100 ps-4" style="height: 90px;">
+                                <h5>EL ALAOUI Abdellah</h5>
+                                <span class="text-primary">Assistant Training and Project Manager</span>
+                                <div class="team-social">
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/abdellah.elalaoui.393"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.linkedin.com/in/abdellah-el-alaoui-152792273?/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.instagram.com/abdellah1805/"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
