modification sur les pages

--- a/index.html
+++ b/index.html
@@ -649,9 +649,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>As a former president of the Industrial Club, I had the honor of leading a dedicated team toward a shared vision: to make the club a cornerstone of innovation and hands-on training for our members. Together, we worked to create an environment where every student could develop practical skills, collaborate on ambitious industrial projects, and prepare for the challenges of the professional world. The club remains, for me, a source of pride and a symbol of the excellence and passion we all share for the industry.</p>
-                        <h5 class="mb-1">RAMOUCH Abdellah</h5>
-                        <span class="fst-italic">Former president</span>
+                        <p>As the current President of the Industrial Club, I am honored to lead our team in pursuing a vision of excellence, innovation, and practical skill-building. My role is to guide our members in creating a collaborative environment where each individual can gain hands-on experience, work on impactful projects, and bridge the gap between theoretical knowledge and industry demands. Together, we strive to make the club a place of growth, creativity, and professional readiness, embodying our commitment to shaping future leaders in the industry.</p>
+                        <h5 class="mb-1">IDOUAHMAN HASNAE</h5>
+                        <span class="fst-italic">President</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
@@ -662,9 +662,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>As a former vice-president of the Industrial Club, I had the privilege of supporting a talented team in pursuing our shared vision: to establish the club as a hub of innovation and practical training for our members. Together, we created an environment where each student could build essential skills, collaborate on impactful industrial projects, and prepare for the demands of the professional world. The club remains a source of pride for me, embodying the excellence and dedication we all bring to the field of industry.</p>
-                        <h5 class="mb-1">BEN SAAD Mehdi</h5>
-                        <span class="fst-italic">Former Vice-president</span>
+                        <p>As the current Vice-President of the Industrial Club, I am honored to support our team in realizing our vision of creating a hub for innovation and skill development. My role focuses on fostering a collaborative environment where members can gain practical experience, work on impactful projects, and bridge the gap between academic knowledge and industry needs. Together, we are building a space that encourages growth, creativity, and readiness for the professional challenges ahead, embodying our club's commitment to excellence and continuous learning.</p>
+                        <h5 class="mb-1">EL BOURKADI Otmane</h5>
+                        <span class="fst-italic">Vice-president</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
@@ -675,9 +675,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>As a former Media Manager of the Industrial Club, I had the privilege of showcasing our vision and achievements to a broader audience. My role focused on highlighting the club’s commitment to innovation and practical training, ensuring that our members' projects and successes were shared and celebrated. The experience reinforced my belief in the club's mission and its impact, which continues to inspire future industry leaders and foster a strong community dedicated to excellence and growth.</p>
-                        <h5 class="mb-1">RHOU Mohamed</h5>
-                        <span class="fst-italic">Former Media Manager</span>
+                        <p>As the current Training and Projects Manager of the Industrial Club, I have the privilege of organizing initiatives that equip our members with essential skills and practical experience. My goal is to bridge the gap between academic knowledge and industry demands by coordinating workshops, training sessions, and collaborative projects. Through these efforts, I aim to foster a dynamic environment where each student can innovate, grow, and confidently prepare for the challenges of the professional world. The club embodies our commitment to excellence and continuous learning.</p>
+                        <h5 class="mb-1">ZAOUANI hicham</h5>
+                        <span class="fst-italic">Training and Projects Manager</span>
                     </div>
                 </div>
             </div>
