modification sur les pages

--- a/404.html
+++ b/404.html
@@ -115,6 +115,16 @@
     <!-- events Start -->
     <div class="news-container">
         <div class="news-item">
+            <img src="img/JI6.jpg" alt="Image de nouvelle">
+            <h2>The 6th Industrial Day</h2>
+            <p>
+                The 6th Industrial Day, organized by the Industrial Club of the International Academy Mohammed VI of Civil Aviation (AIAC), 
+                <details>
+                    <summary>Show mor</summary>
+                    focuses on the theme of "The Challenges of Transitioning from Industry 2.0 to 4.0: A Path Toward a New Model of Local Development. Scheduled for April 15, 2020, this 6th edition will explore the evolution from traditional industrial practices to advanced, digitalized solutions that enhance local development. The event will take place at AIAC's campus in Nouaceur, within the Mohammed V Airport Technopole, inviting participants to discuss innovation in industry and the role of Industry 4.0 in economic and technological progress.
+                </details>
+        </div>
+        <div class="news-item">
             <img src="img/JI5.jpg" alt="Image de nouvelle">
             <h2>The 5th Industrial Day</h2>
             <p>
@@ -151,7 +161,54 @@
                 </details>
             </p>
         </div>
+        <div class="news-item">
+            <img src="img/aktion.jpg" alt="Image de nouvelle">
+            <h2>Aktion</h2>
+            <p> 
+
+                <details>
+                <summary>Show mor</summary>
+
+                </details>
+            </p>
+        </div>
     </div>
+
+    <div class="gallery">
+        <div class="item1">
+            <img src="img/image2.jpeg" alt="Description de l'image 1">
+            <p>Description pour l'image 1</p>
+        </div>
+        <div class="item1">
+            <img src="img/imageAction.jpeg" alt="Description de l'image 2">
+            <p>Description pour l'image 2</p>
+        </div>
+        <div class="item1">
+            <img src="img/image2.jpeg" alt="Description de l'image 3">
+            <p>Description pour l'image 3</p>
+        </div>
+        <div class="item1">
+            <img src="img/image4.jpeg" alt="Description de l'image 3">
+            <p>Description pour l'image 4</p>
+        </div>
+        <div class="item1">
+            <img src="img/imageAktion.jpeg" alt="Description de l'image 3">
+            <p>Description pour l'image 4</p>
+        </div>
+    </div>
+
+    <div class="gallery">
+        <div class="item1">
+            <img src="img/image3.jpeg" alt="Description de l'image 1">
+            <p>Description pour l'image 1</p>
+        </div>
+        <div class="item1">
+            <img src="img/image7.jpg" alt="Description de l'image 2">
+            <p>Description pour l'image 2</p>
+        </div>
+        
+    </div>
+
     <!-- events End -->
         
 
