modification sur les pages

--- a/404.html
+++ b/404.html
@@ -176,35 +176,35 @@
 
     <div class="gallery">
         <div class="item1">
-            <img src="img/image2.jpeg" alt="Description de l'image 1">
-            <p>Description pour l'image 1</p>
+            <img src="img/image2.jpeg" alt="">
+            <p></p>
         </div>
         <div class="item1">
-            <img src="img/imageAction.jpeg" alt="Description de l'image 2">
-            <p>Description pour l'image 2</p>
+            <img src="img/imageAction.jpeg" alt="">
+            <p></p>
         </div>
         <div class="item1">
-            <img src="img/image2.jpeg" alt="Description de l'image 3">
-            <p>Description pour l'image 3</p>
+            <img src="img/image2.jpeg" alt="">
+            <p></p>
         </div>
         <div class="item1">
-            <img src="img/image4.jpeg" alt="Description de l'image 3">
-            <p>Description pour l'image 4</p>
+            <img src="img/image4.jpeg" alt="">
+            <p></p>
         </div>
         <div class="item1">
-            <img src="img/imageAktion.jpeg" alt="Description de l'image 3">
-            <p>Description pour l'image 4</p>
+            <img src="img/imageAktion.jpeg" alt="">
+            <p></p>
         </div>
     </div>
 
     <div class="gallery">
         <div class="item1">
-            <img src="img/image3.jpeg" alt="Description de l'image 1">
-            <p>Description pour l'image 1</p>
+            <img src="img/image3.jpeg" alt="">
+            <p></p>
         </div>
         <div class="item1">
-            <img src="img/image7.jpg" alt="Description de l'image 2">
-            <p>Description pour l'image 2</p>
+            <img src="img/image7.jpg" alt="">
+            <p></p>
         </div>
         
     </div>
