--- a/testimonial.html
+++ b/testimonial.html
@@ -82,9 +82,9 @@
                     <div class="dropdown-menu bg-light m-0">
                         <a href="project.html" class="dropdown-item">Projects</a>
                         <a href="feature.html" class="dropdown-item">Trainings</a>
-                        <a href="404.html" class="dropdown-item active">Events</a>
+                        <a href="404.html" class="dropdown-item">Events</a>
                         <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="testimonial.html" class="dropdown-item active">Testimonial</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
