modification sur les pages

--- a/feature.html
+++ b/feature.html
@@ -80,7 +80,7 @@
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="project.html" class="dropdown-item">Projects</a>
-                        <a href="feature.html" class="dropdown-item active">Trainings</a>
+                        <a href="feature.html" class="dropdown-item active">Features</a>
                         <a href="404.html" class="dropdown-item">Events</a>
                         <a href="team.html" class="dropdown-item">Our Team</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
@@ -120,7 +120,7 @@
                         <img class="img-fluid w-100" src="img/feature.jpg" alt="">
                         <span class="position-absolute top-50 start-100 translate-middle bg-white rounded-circle d-none d-lg-block" style="width: 120px; height: 120px;"></span>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
-                            data-src="https://youtu.be/eDP_A_HLPFg?si=ewSUAJoMXJ6DkJhF" data-bs-target="#videoModal">
+                             data-bs-target="#videoModal">
                             <span></span>
                         </button>
                     </div>
