"Updated service.html: changed service titles and descriptions, removed duplicate service items, and modified testimonial section"

--- a/service.html
+++ b/service.html
@@ -128,11 +128,13 @@
                         <div class="service-detail">
                             <div class="service-title">
                                 <hr class="w-25">
-                                <h3 class="mb-0">Civil & Gas Engineering</h3>
+                                <h3 class="mb-0">Workshops and Training Sessions</h3>
                                 <hr class="w-25">
                             </div>
                             <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                <p class="text-white mb-0">Hands-on training in industrial automation, production processes, robotics, and manufacturing technologies.
+                                    Seminars on the latest trends in industrial and production engineering (e.g., lean manufacturing, 3D printing, IoT in industry).
+                                    </p>
                             </div>
                         </div>
                         <a class="btn btn-light" href="">Read More</a>
@@ -147,11 +149,11 @@
                         <div class="service-detail">
                             <div class="service-title">
                                 <hr class="w-25">
-                                <h3 class="mb-0">Power & Energy Engineering</h3>
+                                <h3 class="mb-0">Industrial Visits and Tours</h3>
                                 <hr class="w-25">
                             </div>
                             <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                <p class="text-white mb-0">Organizing field trips to manufacturing plants, industrial sites, and engineering companies to give students practical exposure.</p>
                             </div>
                         </div>
                         <a class="btn btn-light" href="">Read More</a>
@@ -166,68 +168,11 @@
                         <div class="service-detail">
                             <div class="service-title">
                                 <hr class="w-25">
-                                <h3 class="mb-0">Plumbing & Water Treatment</h3>
+                                <h3 class="mb-0">Student-Led Projects</h3>
                                 <hr class="w-25">
                             </div>
                             <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
-                            </div>
-                        </div>
-                        <a class="btn btn-light" href="">Read More</a>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item">
-                        <img class="img-fluid" src="img/service-1.jpg" alt="">
-                        <div class="service-img">
-                            <img class="img-fluid" src="img/service-1.jpg" alt="">
-                        </div>
-                        <div class="service-detail">
-                            <div class="service-title">
-                                <hr class="w-25">
-                                <h3 class="mb-0">Civil & Gas Engineering</h3>
-                                <hr class="w-25">
-                            </div>
-                            <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
-                            </div>
-                        </div>
-                        <a class="btn btn-light" href="">Read More</a>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item">
-                        <img class="img-fluid" src="img/service-2.jpg" alt="">
-                        <div class="service-img">
-                            <img class="img-fluid" src="img/service-2.jpg" alt="">
-                        </div>
-                        <div class="service-detail">
-                            <div class="service-title">
-                                <hr class="w-25">
-                                <h3 class="mb-0">Power & Energy Engineering</h3>
-                                <hr class="w-25">
-                            </div>
-                            <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
-                            </div>
-                        </div>
-                        <a class="btn btn-light" href="">Read More</a>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="service-item">
-                        <img class="img-fluid" src="img/service-3.jpg" alt="">
-                        <div class="service-img">
-                            <img class="img-fluid" src="img/service-3.jpg" alt="">
-                        </div>
-                        <div class="service-detail">
-                            <div class="service-title">
-                                <hr class="w-25">
-                                <h3 class="mb-0">Plumbing & Water Treatment</h3>
-                                <hr class="w-25">
-                            </div>
-                            <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                <p class="text-white mb-0">Facilitating group projects that focus on solving real-world industrial problems or creating new engineering solutions.</p>
                             </div>
                         </div>
                         <a class="btn btn-light" href="">Read More</a>
@@ -244,7 +189,7 @@
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="fw-medium text-uppercase text-primary mb-2">Testimonial</p>
-                <h1 class="display-5 mb-5">What Our Clients Say!</h1>
+                <h1 class="display-5 mb-5">What Our Members Say!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
@@ -255,9 +200,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
+                        <p>As the current President of the Industrial Club, I am honored to lead our team in pursuing a vision of excellence, innovation, and practical skill-building. My role is to guide our members in creating a collaborative environment where each individual can gain hands-on experience, work on impactful projects, and bridge the gap between theoretical knowledge and industry demands. Together, we strive to make the club a place of growth, creativity, and professional readiness, embodying our commitment to shaping future leaders in the industry.</p>
+                        <h5 class="mb-1">IDOUAHMAN HASNAE</h5>
+                        <span class="fst-italic">President</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
@@ -268,9 +213,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
+                        <p>As the current Vice-President of the Industrial Club, I am honored to support our team in realizing our vision of creating a hub for innovation and skill development. My role focuses on fostering a collaborative environment where members can gain practical experience, work on impactful projects, and bridge the gap between academic knowledge and industry needs. Together, we are building a space that encourages growth, creativity, and readiness for the professional challenges ahead, embodying our club's commitment to excellence and continuous learning.</p>
+                        <h5 class="mb-1">EL BOURKADI Otmane</h5>
+                        <span class="fst-italic">Vice-president</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
@@ -281,9 +226,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
+                        <p>As the current Training and Projects Manager of the Industrial Club, I have the privilege of organizing initiatives that equip our members with essential skills and practical experience. My goal is to bridge the gap between academic knowledge and industry demands by coordinating workshops, training sessions, and collaborative projects. Through these efforts, I aim to foster a dynamic environment where each student can innovate, grow, and confidently prepare for the challenges of the professional world. The club embodies our commitment to excellence and continuous learning.</p>
+                        <h5 class="mb-1">ZAOUANI hicham</h5>
+                        <span class="fst-italic">Training and Projects Manager</span>
                     </div>
                 </div>
             </div>
