--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
                     <p class="mb-4">Our mission is to foster innovation and collaboration among students passionate about industrial and production engineering. We aim to bridge the gap between academic theory and practical applications in the industry.</p>
                     <div class="d-flex align-items-center mb-4">
                         <div class="flex-shrink-0 bg-primary p-4">
-                            <h1 class="display-2">9</h1>
+                            <h1 class="display-2">+9</h1>
                             <h5 class="text-white">Years of</h5>
                             <h5 class="text-white">Experience</h5>
                         </div>
@@ -177,28 +177,28 @@
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.1s">
                 <div class="text-center border p-5">
                     <i class="fa fa-certificate fa-3x text-white mb-3"></i>
-                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">25</h1>
+                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">+9</h1>
                     <span class="fs-5 fw-semi-bold text-white">Years Experience</span>
                 </div>
             </div>
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.3s">
                 <div class="text-center border p-5">
                     <i class="fa fa-users-cog fa-3x text-white mb-3"></i>
-                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">135</h1>
+                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">65</h1>
                     <span class="fs-5 fw-semi-bold text-white">Team Members</span>
                 </div>
             </div>
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.5s">
                 <div class="text-center border p-5">
                     <i class="fa fa-users fa-3x text-white mb-3"></i>
-                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">957</h1>
-                    <span class="fs-5 fw-semi-bold text-white">Happy Clients</span>
+                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">450</h1>
+                    <span class="fs-5 fw-semi-bold text-white">Old Members</span>
                 </div>
             </div>
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
                 <div class="text-center border p-5">
                     <i class="fa fa-check-double fa-3x text-white mb-3"></i>
-                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">1839</h1>
+                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">+9</h1>
                     <span class="fs-5 fw-semi-bold text-white">Projects Done</span>
                 </div>
             </div>
@@ -343,9 +343,29 @@
                                 <h5>DOUK Ilyas</h5>
                                 <span class="text-primary">Treasurer</span>
                                 <div class="team-social">
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/profile.php?id=100006062176075&mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="http://linkedin.com/in/ilyas-douk-8b653624a"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.instagram.com/ilyas_douk/"><i class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item">
+                        <img class="img-fluid" src="img/team-8.jpg" alt="">
+                        <div class="d-flex">
+                            <div class="flex-shrink-0 btn-square bg-primary" style="width: 90px; height: 90px;">
+                                <i class="fa fa-2x fa-share text-white"></i>
+                            </div>
+                            <div class="position-relative overflow-hidden bg-light d-flex flex-column justify-content-center w-100 ps-4" style="height: 90px;">
+                                <h5>EL ALAOUI Abdellah</h5>
+                                <span class="text-primary">Assistant Training and Project Manager</span>
+                                <div class="team-social">
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/abdellah.elalaoui.393"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.linkedin.com/in/abdellah-el-alaoui-152792273?/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.instagram.com/abdellah1805/"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
