--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <p class="mb-4">Our mission is to foster innovation and collaboration among students passionate about industrial and production engineering. We aim to bridge the gap between academic theory and practical applications in the industry.</p>
                     <div class="d-flex align-items-center mb-4">
                         <div class="flex-shrink-0 bg-primary p-4">
-                            <h1 class="display-2">9</h1>
+                            <h1 class="display-2">+9</h1>
                             <h5 class="text-white">Years of</h5>
                             <h5 class="text-white">Experience</h5>
                         </div>
@@ -228,7 +228,7 @@
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.1s">
                 <div class="text-center border p-5">
                     <i class="fa fa-certificate fa-3x text-white mb-3"></i>
-                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">9</h1>
+                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">+9</h1>
                     <span class="fs-5 fw-semi-bold text-white">Years Experience</span>
                 </div>
             </div>
@@ -242,14 +242,14 @@
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.5s">
                 <div class="text-center border p-5">
                     <i class="fa fa-users fa-3x text-white mb-3"></i>
-                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">457</h1>
+                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">450</h1>
                     <span class="fs-5 fw-semi-bold text-white">Old Members</span>
                 </div>
             </div>
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
                 <div class="text-center border p-5">
                     <i class="fa fa-check-double fa-3x text-white mb-3"></i>
-                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">9</h1>
+                    <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">+9</h1>
                     <span class="fs-5 fw-semi-bold text-white">Projects Done</span>
                 </div>
             </div>
