"Updated 'Follow' button links to https://www.instagram.com/clubindusaiac/ in multiple HTML files."

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary px-3 d-none d-lg-block" id="followButton">Follow</a>
+            <a href="https://www.instagram.com/clubindusaiac/" class="btn btn-primary px-3 d-none d-lg-block" id="followButton">Follow</a>
             
         </div>
     </nav>
