--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary px-3 d-none d-lg-block">Follow</a>
+            <a href="https://www.instagram.com/clubindusaiac/" class="btn btn-primary px-3 d-none d-lg-block">Follow</a>
         </div>
     </nav>
     <!-- Navbar End -->
