--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link active">Contact</a>
             </div>
-            <a href="" class="btn btn-primary px-3 d-none d-lg-block">Follow</a>
+            <a href="https://www.instagram.com/clubindusaiac/" class="btn btn-primary px-3 d-none d-lg-block">Follow</a>
             
         </div>
     </nav>
