--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <div class="col-lg-10 text-start">
                                     <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight">9 Years of Working Experience</p>
                                     <h1 class="display-1 text-white mb-5 animated slideInRight">Empowering Tomorrow's Industrial Leaders</h1>
-                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Explore More</a>
+                                    <a href="#about" class="btn btn-primary py-3 px-5 animated slideInRight">Explore More</a>
                                 </div>
                             </div>
                         </div>
